Fix extra space on bottom

--- a/browser/components/footer/footer.scss
+++ b/browser/components/footer/footer.scss
@@ -7,6 +7,7 @@ $footer-height: 60px;
 
 body {
 	padding-bottom: $footer-height + 50px;
+	min-height: 100vh;
 }
 
 .footer {
